# gandi-ddns

./: .gitignore  Cargo.toml  README.md  cfg.example.toml  default.nix  flake.nix
.github/workflows/: build.yml
src/: configuration.rs  ip.rs  main.rs
