[package]
name = "gandi-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
reqwest = { version = "0.11.12", features = ["blocking"]}
serde_json = "1.0.87"