[package]
name = "gandi-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
serde_json = "1.0.87"
# reqwest - Disable OpenSSL default implementation and use rustls instead to allow for cross compilation using cross: https://github.com/cross-rs/cross
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "rustls", "rustls-tls"]}